--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -212,14 +212,10 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\JsonHelper.cs" />
-    <Compile Include="Models\AccountBindingModels.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ResultModel.cs" />
     <Compile Include="Models\TestModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\ApplicationOAuthProvider.cs" />
-    <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -235,11 +231,11 @@
     <Content Include="App\Views\PostTool.html" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="favicon.ico" />
-    <Content Include="font.css" />
+    <Content Include="static\font.css" />
     <Content Include="Global.asax" />
     <Content Include="Index.html" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="static\Scripts\bootstrap.js" />
+    <Content Include="static\Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
     <Content Include="Areas\HelpPage\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\ResourceModel.cshtml" />
@@ -261,37 +257,37 @@
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <Content Include="App\TestData\person.json" />
     <None Include="Properties\PublishProfiles\Core3017.pubxml" />
-    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\jquery-1.10.2.js" />
-    <Content Include="Scripts\jquery-1.10.2.min.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\respond.js" />
-    <Content Include="Scripts\respond.min.js" />
-    <Content Include="Scripts\ui-bootstrap-tpls-0.13.0.min.js" />
-    <Content Include="Styles\site.css" />
-    <Content Include="typicons\demo.html" />
-    <Content Include="typicons\typicons.css" />
-    <Content Include="typicons\typicons.min.css" />
-    <Content Include="typicons\typicons.svg" />
-    <Content Include="vendor\css\bootstrap-theme.css" />
-    <Content Include="vendor\css\bootstrap-theme.min.css" />
-    <Content Include="vendor\css\bootstrap.css" />
-    <Content Include="vendor\css\bootstrap.min.css" />
-    <Content Include="vendor\font-awesome\css\font-awesome.css" />
-    <Content Include="vendor\font-awesome\css\font-awesome.min.css" />
-    <Content Include="vendor\font-awesome\fonts\fontawesome-webfont.svg" />
-    <Content Include="vendor\fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="vendor\js\angular-route.min.js" />
-    <Content Include="vendor\js\angular.js" />
-    <Content Include="vendor\js\bootstrap.js" />
-    <Content Include="vendor\js\bootstrap.min.js" />
-    <Content Include="vendor\js\jquery-1.11.2.min.js" />
-    <Content Include="vendor\js\npm.js" />
+    <None Include="static\Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="static\Scripts\jquery-1.10.2.js" />
+    <Content Include="static\Scripts\jquery-1.10.2.min.js" />
+    <None Include="static\Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="static\Scripts\jquery.validate.js" />
+    <Content Include="static\Scripts\jquery.validate.min.js" />
+    <Content Include="static\Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="static\Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="static\Scripts\modernizr-2.6.2.js" />
+    <Content Include="static\Scripts\respond.js" />
+    <Content Include="static\Scripts\respond.min.js" />
+    <Content Include="static\Scripts\ui-bootstrap-tpls-0.13.0.min.js" />
+    <Content Include="css\site.css" />
+    <Content Include="static\typicons\demo.html" />
+    <Content Include="static\typicons\typicons.css" />
+    <Content Include="static\typicons\typicons.min.css" />
+    <Content Include="static\typicons\typicons.svg" />
+    <Content Include="static\vendor\css\bootstrap-theme.css" />
+    <Content Include="static\vendor\css\bootstrap-theme.min.css" />
+    <Content Include="static\vendor\css\bootstrap.css" />
+    <Content Include="static\vendor\css\bootstrap.min.css" />
+    <Content Include="static\vendor\font-awesome\css\font-awesome.css" />
+    <Content Include="static\vendor\font-awesome\css\font-awesome.min.css" />
+    <Content Include="static\vendor\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="static\vendor\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="static\vendor\js\angular-route.min.js" />
+    <Content Include="static\vendor\js\angular.js" />
+    <Content Include="static\vendor\js\bootstrap.js" />
+    <Content Include="static\vendor\js\bootstrap.min.js" />
+    <Content Include="static\vendor\js\jquery-1.11.2.min.js" />
+    <Content Include="static\vendor\js\npm.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -300,54 +296,54 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
-    <Content Include="Scripts\_references.js" />
+    <Content Include="static\Scripts\_references.js" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="vendor\css\bootstrap-theme.css.map" />
-    <Content Include="vendor\css\bootstrap.css.map" />
-    <Content Include="vendor\font-awesome\fonts\fontawesome-webfont.eot" />
-    <Content Include="vendor\font-awesome\fonts\fontawesome-webfont.ttf" />
-    <Content Include="vendor\font-awesome\fonts\fontawesome-webfont.woff" />
-    <Content Include="vendor\font-awesome\fonts\fontawesome-webfont.woff2" />
-    <Content Include="vendor\font-awesome\fonts\FontAwesome.otf" />
-    <Content Include="vendor\font-awesome\less\animated.less" />
-    <Content Include="vendor\font-awesome\less\bordered-pulled.less" />
-    <Content Include="vendor\font-awesome\less\core.less" />
-    <Content Include="vendor\font-awesome\less\fixed-width.less" />
-    <Content Include="vendor\font-awesome\less\font-awesome.less" />
-    <Content Include="vendor\font-awesome\less\icons.less" />
-    <Content Include="vendor\font-awesome\less\larger.less" />
-    <Content Include="vendor\font-awesome\less\list.less" />
-    <Content Include="vendor\font-awesome\less\mixins.less" />
-    <Content Include="vendor\font-awesome\less\path.less" />
-    <Content Include="vendor\font-awesome\less\rotated-flipped.less" />
-    <Content Include="vendor\font-awesome\less\stacked.less" />
-    <Content Include="vendor\font-awesome\less\variables.less" />
-    <Content Include="vendor\font-awesome\scss\_animated.scss" />
-    <Content Include="vendor\font-awesome\scss\_bordered-pulled.scss" />
-    <Content Include="vendor\font-awesome\scss\_core.scss" />
-    <Content Include="vendor\font-awesome\scss\_fixed-width.scss" />
-    <Content Include="vendor\font-awesome\scss\_icons.scss" />
-    <Content Include="vendor\font-awesome\scss\_larger.scss" />
-    <Content Include="vendor\font-awesome\scss\_list.scss" />
-    <Content Include="vendor\font-awesome\scss\_mixins.scss" />
-    <Content Include="vendor\font-awesome\scss\_path.scss" />
-    <Content Include="vendor\font-awesome\scss\_rotated-flipped.scss" />
-    <Content Include="vendor\font-awesome\scss\_stacked.scss" />
-    <Content Include="vendor\font-awesome\scss\_variables.scss" />
-    <Content Include="vendor\font-awesome\scss\font-awesome.scss" />
-    <Content Include="vendor\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="vendor\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="vendor\fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="vendor\fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="typicons\LICENCE.md" />
-    <Content Include="typicons\typicons.eot" />
-    <Content Include="typicons\typicons.ttf" />
-    <Content Include="typicons\typicons.woff" />
+    <Content Include="static\Scripts\jquery-1.10.2.min.map" />
+    <Content Include="static\vendor\css\bootstrap-theme.css.map" />
+    <Content Include="static\vendor\css\bootstrap.css.map" />
+    <Content Include="static\vendor\font-awesome\fonts\fontawesome-webfont.eot" />
+    <Content Include="static\vendor\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="static\vendor\font-awesome\fonts\fontawesome-webfont.woff" />
+    <Content Include="static\vendor\font-awesome\fonts\fontawesome-webfont.woff2" />
+    <Content Include="static\vendor\font-awesome\fonts\FontAwesome.otf" />
+    <Content Include="static\vendor\font-awesome\less\animated.less" />
+    <Content Include="static\vendor\font-awesome\less\bordered-pulled.less" />
+    <Content Include="static\vendor\font-awesome\less\core.less" />
+    <Content Include="static\vendor\font-awesome\less\fixed-width.less" />
+    <Content Include="static\vendor\font-awesome\less\font-awesome.less" />
+    <Content Include="static\vendor\font-awesome\less\icons.less" />
+    <Content Include="static\vendor\font-awesome\less\larger.less" />
+    <Content Include="static\vendor\font-awesome\less\list.less" />
+    <Content Include="static\vendor\font-awesome\less\mixins.less" />
+    <Content Include="static\vendor\font-awesome\less\path.less" />
+    <Content Include="static\vendor\font-awesome\less\rotated-flipped.less" />
+    <Content Include="static\vendor\font-awesome\less\stacked.less" />
+    <Content Include="static\vendor\font-awesome\less\variables.less" />
+    <Content Include="static\vendor\font-awesome\scss\_animated.scss" />
+    <Content Include="static\vendor\font-awesome\scss\_bordered-pulled.scss" />
+    <Content Include="static\vendor\font-awesome\scss\_core.scss" />
+    <Content Include="static\vendor\font-awesome\scss\_fixed-width.scss" />
+    <Content Include="static\vendor\font-awesome\scss\_icons.scss" />
+    <Content Include="static\vendor\font-awesome\scss\_larger.scss" />
+    <Content Include="static\vendor\font-awesome\scss\_list.scss" />
+    <Content Include="static\vendor\font-awesome\scss\_mixins.scss" />
+    <Content Include="static\vendor\font-awesome\scss\_path.scss" />
+    <Content Include="static\vendor\font-awesome\scss\_rotated-flipped.scss" />
+    <Content Include="static\vendor\font-awesome\scss\_stacked.scss" />
+    <Content Include="static\vendor\font-awesome\scss\_variables.scss" />
+    <Content Include="static\vendor\font-awesome\scss\font-awesome.scss" />
+    <Content Include="static\vendor\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="static\vendor\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="static\vendor\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="static\vendor\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="static\typicons\LICENCE.md" />
+    <Content Include="static\typicons\typicons.eot" />
+    <Content Include="static\typicons\typicons.ttf" />
+    <Content Include="static\typicons\typicons.woff" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
